tests/ui/feature-gates/feature-gate-unix_sigpipe-sig_def.stderr
error: valid values for `#[unix_sigpipe = "..."]` are `inherit`, `sig_ign`, or `sig_dfl`, got `sig_def`
  --> $DIR/feature-gate-unix_sigpipe-sig_def.rs:3:1
   |
LL | #[unix_sigpipe = "sig_def"]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

